# BotLink

./: .env.example  .gitignore  GLOBAL_RULES.md  PRD.md  README.md  do_commit.sh  pyproject.toml  repomix-output.xml  requirements.txt
debug_data/: .key
src/: __init__.py  main.py
src/application/interfaces/: __init__.py  ai_port.py  browser_port.py  storage_port.py
src/application/use_cases/: __init__.py  apply_to_job.py  bot_orchestrator.py
src/config/: settings.py
src/domain/entities/: __init__.py  application.py  candidate.py  job.py
src/domain/services/: __init__.py  opsec_service.py
src/domain/value_objects/: __init__.py  credentials.py  job_filter.py
src/infrastructure/ai/: __init__.py  form_filler.py  openai_adapter.py  prompt_builder.py
src/infrastructure/browser/: __init__.py  camoufox_adapter.py  cookie_manager.py  human_simulator.py
src/infrastructure/parsers/: __init__.py  job_parser.py  resume_parser.py
src/infrastructure/security/: __init__.py  crypto.py
src/infrastructure/storage/: __init__.py  migrations.py  sqlite_adapter.py
src/presentation/gui/: __init__.py  app.py
src/presentation/gui/components/: __init__.py  controls.py  credentials.py  job_panel.py  log_dashboard.py  profile.py  resume_upload.py  theme_toggle.py
src/presentation/gui/styles/: __init__.py  theme.py
tests/unit/: test_entities.py  test_opsec_service.py
